k8s-manifests/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py7app
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py7app
            port:
              number: 5000
