k8s-manifests/py7app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py7app
  labels:
    app: py7app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py7app
  template:
    metadata:
      labels:
        app: py7app
    spec:
      containers:
      - name: py7app
        image: aumthakkar/py7app:v1
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: py7app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: py7app
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py7app
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: py7app 
            port:
              number: 5000
